--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohttp==3.8.6
 aiosignal==1.3.1
 alabaster==0.7.12
 appdirs==1.4.4
-apturl==0.5.2
+#apturl==0.5.2
 arrow==1.3.0
 asgiref==3.7.2
 astroid==2.9.3
