--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ black==23.10.0
 bleach==4.1.0
 blinker==1.4
 branca==0.6.0
-Brlapi==0.8.3
+#Brlapi==0.8.3
 Brotli==1.0.9
 certifi==2023.7.22
 cffi==1.16.0
