--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ comm==0.1.4
 contourpy==1.1.1
 cookiecutter==2.4.0
 cryptography==3.4.8
-cupshelpers==1.0
+#cupshelpers==1.0
 cycler==0.12.1
 DateTime==5.2
 dbus-python==1.2.18
