--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ DateTime==5.2
 dbus-python==1.2.18
 debugpy==1.8.0
 decorator==4.4.2
-defer==1.0.6
+#defer==1.0.6
 defusedxml==0.7.1
 diff-match-patch==20200713
 distro==1.7.0
