--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ decorator==4.4.2
 defusedxml==0.7.1
 diff-match-patch==20200713
 distro==1.7.0
-distro-info==1.1+ubuntu0.1
+#distro-info==1.1+ubuntu0.1
 Django==4.2.6
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
