--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohttp==3.8.6
 aiosignal==1.3.1
 alabaster==0.7.12
 appdirs==1.4.4
-#apturl==0.5.2
+apturl==0.5.2
 arrow==1.3.0
 asgiref==3.7.2
 astroid==2.9.3
@@ -20,7 +20,7 @@ black==23.10.0
 bleach==4.1.0
 blinker==1.4
 branca==0.6.0
-#Brlapi==0.8.3
+Brlapi==0.8.3
 Brotli==1.0.9
 certifi==2023.7.22
 cffi==1.16.0
@@ -30,21 +30,21 @@ click==8.1.7
 cloudpickle==2.0.0
 colorama==0.4.6
 comm==0.1.4
-#command-not-found==0.3
+command-not-found==0.3
 contourpy==1.1.1
 cookiecutter==2.4.0
 cryptography==3.4.8
-#cupshelpers==1.0
+cupshelpers==1.0
 cycler==0.12.1
 DateTime==5.2
 dbus-python==1.2.18
 debugpy==1.8.0
 decorator==4.4.2
-#defer==1.0.6
+defer==1.0.6
 defusedxml==0.7.1
 diff-match-patch==20200713
 distro==1.7.0
-#distro-info==1.1+ubuntu0.1
+distro-info==1.1+ubuntu0.1
 Django==4.2.6
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
