--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ django-cors-headers==4.2.0
 djangorestframework==3.14.0
 docstring-to-markdown==0.13
 docutils==0.17.1
-duplicity==0.8.21
+#duplicity==0.8.21
 entrypoints==0.4
 exceptiongroup==1.1.3
 fake-useragent==1.3.0
