--- a/requirements.txt
+++ b/requirements.txt
@@ -90,7 +90,7 @@ jupyterlab-pygments==0.1.2
 keyring==23.5.0
 kite==1.5.7
 kiwisolver==1.4.5
-language-selector==0.1
+#language-selector==0.1
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
