--- a/requirements.txt
+++ b/requirements.txt
@@ -94,7 +94,7 @@ kiwisolver==1.4.5
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
-lazy-object-proxy==0.0.0
+#lazy-object-proxy==0.0.0
 lockfile==0.12.2
 logilab-common==1.8.2
 louis==3.20.0
