--- a/requirements.txt
+++ b/requirements.txt
@@ -97,7 +97,7 @@ lazr.uri==1.0.6
 #lazy-object-proxy==0.0.0
 lockfile==0.12.2
 logilab-common==1.8.2
-louis==3.20.0
+#louis==3.20.0
 lxml==4.8.0
 lz4==3.1.3+dfsg
 macaroonbakery==1.3.1
