--- a/requirements.txt
+++ b/requirements.txt
@@ -99,7 +99,7 @@ lockfile==0.12.2
 logilab-common==1.8.2
 #louis==3.20.0
 lxml==4.8.0
-lz4==3.1.3+dfsg
+#lz4==3.1.3+dfsg
 macaroonbakery==1.3.1
 Mako==1.1.3
 markdown-it-py==3.0.0
