--- a/requirements.txt
+++ b/requirements.txt
@@ -112,7 +112,7 @@ mercurial==6.1.1
 mock==4.0.3
 monotonic==1.6
 more-itertools==8.10.0
-mpmath==0.0.0
+#mpmath==0.0.0
 multidict==6.0.4
 mypy-extensions==0.4.3
 nbclient==0.5.6
