--- a/requirements.txt
+++ b/requirements.txt
@@ -171,7 +171,7 @@ pyRFC3339==1.1
 pyrocko==2023.10.11
 pyrsistent==0.18.1
 PySocks==1.7.1
-pysvn==1.9.15
+#pysvn==1.9.15
 python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.2
 python-debian==0.1.43+ubuntu1.1
