--- a/requirements.txt
+++ b/requirements.txt
@@ -172,7 +172,7 @@ pyrocko==2023.10.11
 pyrsistent==0.18.1
 PySocks==1.7.1
 #pysvn==1.9.15
-python-apt==2.4.0+ubuntu2
+#python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.2
 python-debian==0.1.43+ubuntu1.1
 python-jsonrpc-server==0.4.0
