--- a/requirements.txt
+++ b/requirements.txt
@@ -174,7 +174,7 @@ PySocks==1.7.1
 #pysvn==1.9.15
 #python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
+#python-debian==0.1.43+ubuntu1.1
 python-jsonrpc-server==0.4.0
 python-language-server==0.36.2
 python-lsp-black==1.3.0
