despliegue con la configuración de render

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohttp==3.8.6
 aiosignal==1.3.1
 alabaster==0.7.12
 appdirs==1.4.4
-#apturl==0.5.2
+apturl==0.5.2
 arrow==1.3.0
 asgiref==3.7.2
 astroid==2.9.3
@@ -20,7 +20,7 @@ black==23.10.0
 bleach==4.1.0
 blinker==1.4
 branca==0.6.0
-#Brlapi==0.8.3
+Brlapi==0.8.3
 Brotli==1.0.9
 certifi==2023.7.22
 cffi==1.16.0
@@ -30,27 +30,28 @@ click==8.1.7
 cloudpickle==2.0.0
 colorama==0.4.6
 comm==0.1.4
-#command-not-found==0.3
+command-not-found==0.3
 contourpy==1.1.1
 cookiecutter==2.4.0
 cryptography==3.4.8
-#cupshelpers==1.0
+cupshelpers==1.0
 cycler==0.12.1
 DateTime==5.2
 dbus-python==1.2.18
 debugpy==1.8.0
 decorator==4.4.2
-#defer==1.0.6
+defer==1.0.6
 defusedxml==0.7.1
 diff-match-patch==20200713
 distro==1.7.0
-#distro-info==1.1+ubuntu0.1
+distro-info==1.1+ubuntu0.1
+dj-database-url==2.1.0
 Django==4.2.6
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
 docstring-to-markdown==0.13
 docutils==0.17.1
-#duplicity==0.8.21
+duplicity==0.8.21
 entrypoints==0.4
 exceptiongroup==1.1.3
 fake-useragent==1.3.0
@@ -63,7 +64,7 @@ fs==2.4.12
 future==0.18.2
 gast==0.5.2
 geojson==3.0.1
-#gpg==1.16.0
+gpg==1.16.0
 gunicorn==21.2.0
 h11==0.14.0
 helpdev==0.7.1
@@ -90,16 +91,16 @@ jupyterlab-pygments==0.1.2
 keyring==23.5.0
 kite==1.5.7
 kiwisolver==1.4.5
-#language-selector==0.1
+language-selector==0.1
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
-#lazy-object-proxy==0.0.0
+lazy-object-proxy==0.0.0
 lockfile==0.12.2
 logilab-common==1.8.2
-#louis==3.20.0
+louis==3.20.0
 lxml==4.8.0
-#lz4==3.1.3+dfsg
+lz4==3.1.3+dfsg
 macaroonbakery==1.3.1
 Mako==1.1.3
 markdown-it-py==3.0.0
@@ -112,7 +113,7 @@ mercurial==6.1.1
 mock==4.0.3
 monotonic==1.6
 more-itertools==8.10.0
-#mpmath==0.0.0
+mpmath==0.0.0
 multidict==6.0.4
 mypy-extensions==0.4.3
 nbclient==0.5.6
@@ -144,6 +145,7 @@ ply==3.11
 prompt-toolkit==3.0.28
 protobuf==3.12.4
 psutil==5.9.0
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 py==1.10.0
 pycairo==1.20.1
@@ -171,10 +173,10 @@ pyRFC3339==1.1
 pyrocko==2023.10.11
 pyrsistent==0.18.1
 PySocks==1.7.1
-#pysvn==1.9.15
-#python-apt==2.4.0+ubuntu2
+pysvn==1.9.15
+python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.2
-#python-debian==0.1.43+ubuntu1.1
+python-debian==0.1.43+ubuntu1.1
 python-jsonrpc-server==0.4.0
 python-language-server==0.36.2
 python-lsp-black==1.3.0
