--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ aiohttp==3.8.6
 aiosignal==1.3.1
 alabaster==0.7.12
 appdirs==1.4.4
-#apturl==0.5.2
 arrow==1.3.0
 asgiref==3.7.2
 astroid==2.9.3
@@ -20,7 +19,6 @@ black==23.10.0
 bleach==4.1.0
 blinker==1.4
 branca==0.6.0
-#Brlapi==0.8.3
 Brotli==1.0.9
 certifi==2023.7.22
 cffi==1.16.0
@@ -30,11 +28,9 @@ click==8.1.7
 cloudpickle==2.0.0
 colorama==0.4.6
 comm==0.1.4
-#command-not-found==0.3
 contourpy==1.1.1
 cookiecutter==2.4.0
 cryptography==3.4.8
-cupshelpers==1.0
 cycler==0.12.1
 DateTime==5.2
 dbus-python==1.2.18
@@ -260,3 +256,7 @@ yapf==0.40.2
 yarl==1.9.2
 zipp==1.0.0
 zope.interface==6.1
+#cupshelpers==1.0
+#apturl==0.5.2
+#Brlapi==0.8.3
+#command-not-found==0.3
