--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,6 @@ DateTime==5.2
 dbus-python==1.2.18
 debugpy==1.8.0
 decorator==4.4.2
-defer==1.0.6
 defusedxml==0.7.1
 diff-match-patch==20200713
 distro==1.7.0
@@ -260,3 +259,4 @@ zope.interface==6.1
 #apturl==0.5.2
 #Brlapi==0.8.3
 #command-not-found==0.3
+#defer==1.0.6
