--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,6 @@ decorator==4.4.2
 defusedxml==0.7.1
 diff-match-patch==20200713
 distro==1.7.0
-distro-info==1.1+ubuntu0.1
 dj-database-url==2.1.0
 Django==4.2.6
 django-cors-headers==4.2.0
@@ -260,3 +259,4 @@ zope.interface==6.1
 #Brlapi==0.8.3
 #command-not-found==0.3
 #defer==1.0.6
+#distro-info==1.1+ubuntu0.1
