--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,6 @@ django-cors-headers==4.2.0
 djangorestframework==3.14.0
 docstring-to-markdown==0.13
 docutils==0.17.1
-duplicity==0.8.21
 entrypoints==0.4
 exceptiongroup==1.1.3
 fake-useragent==1.3.0
@@ -260,3 +259,4 @@ zope.interface==6.1
 #command-not-found==0.3
 #defer==1.0.6
 #distro-info==1.1+ubuntu0.1
+#duplicity==0.8.21
