--- a/requirements.txt
+++ b/requirements.txt
@@ -86,7 +86,6 @@ kiwisolver==1.4.5
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
-lazy-object-proxy==0.0.0
 lockfile==0.12.2
 logilab-common==1.8.2
 louis==3.20.0
@@ -260,3 +259,4 @@ zope.interface==6.1
 #duplicity==0.8.21
 #gpg==1.16.0
 #language-selector==0.1
+#lazy-object-proxy==0.0.0
