--- a/requirements.txt
+++ b/requirements.txt
@@ -88,7 +88,6 @@ lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
 lockfile==0.12.2
 logilab-common==1.8.2
-louis==3.20.0
 lxml==4.8.0
 lz4==3.1.3+dfsg
 macaroonbakery==1.3.1
@@ -260,3 +259,4 @@ zope.interface==6.1
 #gpg==1.16.0
 #language-selector==0.1
 #lazy-object-proxy==0.0.0
+#louis==3.20.0
