--- a/requirements.txt
+++ b/requirements.txt
@@ -89,7 +89,6 @@ lazr.uri==1.0.6
 lockfile==0.12.2
 logilab-common==1.8.2
 lxml==4.8.0
-lz4==3.1.3+dfsg
 macaroonbakery==1.3.1
 Mako==1.1.3
 markdown-it-py==3.0.0
@@ -260,3 +259,4 @@ zope.interface==6.1
 #language-selector==0.1
 #lazy-object-proxy==0.0.0
 #louis==3.20.0
+#lz4==3.1.3+dfsg
