--- a/requirements.txt
+++ b/requirements.txt
@@ -101,7 +101,6 @@ mercurial==6.1.1
 mock==4.0.3
 monotonic==1.6
 more-itertools==8.10.0
-mpmath==0.0.0
 multidict==6.0.4
 mypy-extensions==0.4.3
 nbclient==0.5.6
@@ -260,3 +259,4 @@ zope.interface==6.1
 #lazy-object-proxy==0.0.0
 #louis==3.20.0
 #lz4==3.1.3+dfsg
+#mpmath==0.0.0
