--- a/requirements.txt
+++ b/requirements.txt
@@ -161,7 +161,6 @@ pyrocko==2023.10.11
 pyrsistent==0.18.1
 PySocks==1.7.1
 python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
 python-jsonrpc-server==0.4.0
 python-language-server==0.36.2
 python-lsp-black==1.3.0
@@ -260,3 +259,4 @@ zope.interface==6.1
 #mpmath==0.0.0
 #pysvn==1.9.15
 #python-apt==2.4.0+ubuntu2
+#python-debian==0.1.43+ubuntu1.1
